# uv_pytorch_cuda_test

./: README.md  main.py  pyproject.toml  test_torch.py  uv_note.md
