[project]
name = "uv-pytorch-cuda-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[tool.uv.sources]
torch = { path = "../../../下载/torch-2.9.1+cu130-cp314-cp314-win_amd64.whl" }

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

